dk TL 핑 출력 해봐야하는데 귀차나

--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -110,6 +110,10 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <UACExecutionLevel>RequireAdministrator</UACExecutionLevel>
     </Link>
+    <Manifest>
+      <AdditionalOptions>
+        <requestedExecutionLevel level="requireAdministrator" uiAccess="false" /> %(AdditionalOptions)</AdditionalOptions>
+    </Manifest>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
